@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2128 2012/01/11 22:10:07 cr Exp $
+# $Id: CHANGES,v 1.2129 2012/01/12 05:13:46 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.0.beta4 2012-01-??
+ - 2012-01-11 Fixed bug#8103 - Edit screens does not get Dynamic Field values from selected ticket.
  - 2012-01-11 Fixed bug#8070 - Date Dynamic Fields ranges don't apply.
  - 2012-01-11 Updated CPAN module YAML to version 0.78.
  - 2012-01-11 Updated CPAN module Net::IMAP::Simple to version 1.20271.
